2022-12-03T08:16:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3607702174 # 669
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 257 466 / 266 483
* notice: next accum: outdated-unq outdated-all / unq all: 257 466 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-19]

2022-12-02T16:18:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3603316457 # 667
* notice: last 14d: unq all: 2 17
* notice: prev accum: outdated-unq outdated-all / unq all: 256 464 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 257 466 / 266 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-18] / []

2022-12-02T08:17:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3600024671 # 666
* notice: last 14d: unq all: 2 18
* notice: prev accum: outdated-unq outdated-all / unq all: 256 464 / 266 483
* notice: next accum: outdated-unq outdated-all / unq all: 256 464 / 266 482
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-18]

2022-12-02T01:07:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3597946576 # 665
* notice: last 14d: unq all: 2 19
* notice: prev accum: outdated-unq outdated-all / unq all: 255 462 / 266 482
* notice: next accum: outdated-unq outdated-all / unq all: 256 464 / 266 483
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-17] / []

2022-12-01T08:19:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3590755920 # 663