@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-03T08:16:33Z",
-  "count_outdated" : 466,
-  "uniques_outdated" : 257,
-  "count" : 482,
+  "timestamp" : "2022-12-03T16:17:27Z",
+  "count_outdated" : 468,
+  "uniques_outdated" : 258,
+  "count" : 483,
   "uniques" : 266,
   "clones" : [
-    {
-      "timestamp": "2022-11-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-20T00:00:00Z",
       "count": 2,
