@@ -1,3 +1,11 @@
+2022-12-03T16:17:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3609285866 # 670
+* notice: last 14d: unq all: 2 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 257 466 / 266 482
+* notice: next accum: outdated-unq outdated-all / unq all: 258 468 / 266 483
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-19] / []
+
 2022-12-03T08:16:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3607702174 # 669
 * notice: last 14d: unq all: 2 16
